--- a/sidebar.html
+++ b/sidebar.html
@@ -2,7 +2,7 @@
  <div class="w-64 bg-white h-screen shadow-md">
     <div class="p-4 bg-blue-600 text-white">
      <div class="flex items-center">
-      <!-- <img alt="Company Logo" class="w-10 h-10 mr-2" height="40" src="" width="40"/> -->
+      <img src="logo.png" class="w-10 h-10 mr-2" height="40" src="" width="40"/>
       <div>
        <h1 class="text-lg font-bold">
         Manajemen Karyawan
@@ -12,7 +12,7 @@
     </div>
     <div class="p-4">
      <div class="flex items-center mb-4">
-      <img alt="User Avatar" class="w-10 h-10 rounded-full mr-2" height="40" src="https://storage.googleapis.com/a1aa/image/hMmHnrL8wrr5GhayPjUAS2wmAaMYYofg645blOQSG8meB0sTA.jpg" width="40"/>
+      <img alt="User Avatar" class="w-10 h-10 rounded-full mr-2" height="40" src="logo.png" width="40"/>
       <div>
        <p class="font-semibold">
         Welcome, Mochamad Masdarul Anwar
